# GY-25-GUI-micropython

./: .pdm.toml  1.csv  GY-25-GUI-2.py  GY-25-GUI.py  README.md  pyproject.toml  test1.py  webtest1.py
01_arduino/220822_direct_recieve/: 220822_direct_recieve.ino
01_arduino/220822_no_use/: 220822_direct_recieve.ino
01_arduino/220823_direct_recieve_use_this/: 220823_usb_recieve.ino
01_arduino/Final_Recieve/: Final_Recieve.ino
01_arduino/Final_Transmitter/: Final_Transmitter.ino  my_func.py.txt
